When copying two tables we would get a crash as we were assuming it was all one table. But trying to fix that it turns out we had a bigger issue. We couldn't copy a part of a table, so I fixed that instead keeping in mind that we could have selected more than on table.

CCBUG:275990
BUG:330284